--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
 
   <section id="video-section">
     <h2>Vue en direct</h2>
-<!--  <img src="http://192.168.100.153:5000/stream" alt="Flux vidéo" style="width:100%; border-radius: 12px; margin-bottom: 20px;"> -->
+<img src="http://192.168.100.126:5000/stream_with_obstacle_detection" alt="Flux vidéo" style="width:100%; border-radius: 12px; margin-bottom: 20px;">
 </section>
 
   <footer>
