--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Carduino - Accueil</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <title>Carduino - Bienvenue</title>
+  <link rel="stylesheet" href="assets/css/home.css" />
 </head>
 <body>
-  <header>
-    <h1>Bienvenue sur Carduino</h1>
-    <nav>
-      <a href="login.html">Connexion</a> | 
-      <a href="signup.html">Inscription</a>
-    </nav>
-  </header>
+  <div class="hero">
+    <div class="background-image"></div>
+    <div class="glass-card">
+      <h1>Bienvenue sur <span>CarDuino</span></h1>
+      <p>Gérez vos véhicules connectés en toute simplicité</p>
+      <div class="actions">
+        <a href="login.html" class="btn primary">Connexion</a>
+        <a href="signup.html" class="btn secondary">Inscription</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
