--- a/profile.html
+++ b/profile.html
@@ -2,14 +2,17 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Profil - Carduino</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/profile.css" />
 </head>
 <body>
-  <h1>Profil utilisateur</h1>
+  <h1>Mon Profil</h1>
+  <a href="dashboard.html" class="back-dashboard-link">← Retour au tableau de bord</a>
+
   <div id="profile-container">
     <div id="avatar-container">
-      <img id="avatar" src="" alt="Avatar utilisateur" style="width:120px; height:120px; border-radius:50%; object-fit:cover;">
+      <img id="avatar" src="" alt="Avatar utilisateur" />
     </div>
     <div id="profile-data">
       <p><strong>Nom :</strong> <span id="name"></span></p>
